--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -10,8 +10,8 @@ jobs:
     - name: AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-       aws-access-key-id: ASIAXWDRTCCOEPH77DVX
-       aws-secret-access-key: fqXVxSMxcNqyShTqAlXky3jxV2dHAerxCxAqhlVE
+       aws-access-key-id: ASIAXWDRTCCONSM7GX2U
+       aws-secret-access-key: 0Us7WPItJuXjyypQO/zn2AcepXU/e+1Gz1QS/OQ+
        aws-region: ap-south-1
     - name: setup terraform
       uses: hashicorp/setup-terraform@v2
