--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -2,6 +2,10 @@ name: terraform destroy
 
 on:
   workflow_dispatch:
+    inputs:
+      AWS_REGION:
+        description: 'Region required'
+        required: true
 jobs:
   terraform-destroy:
     runs-on: ubuntu-latest
@@ -13,7 +17,7 @@ jobs:
        aws-access-key-id: ${{secrets.ACCESS_KEY_ID}}
        aws-secret-access-key: ${{secrets.SECRET_ACCESS_KEY}}
        aws-session-token: ${{secrets.SESSION_TOKEN}}
-       aws-region: ap-south-1  
+       aws-region: ${{inputs.AWS_REGION}} 
     - name: setup terraform
       uses: hashicorp/setup-terraform@v2
     - name: terraform detsroy
